lib/src/compiler/tests/testdata/errors/74.out
error[E001]: syntax error
 --> line:1:8
  |
1 | global foo rule test { condition: true }
  |        ^^^ expecting `private` or `rule`, found `foo`
  |